<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <TextView
        android:id="@+id/addfooter"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/colorPrimary"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/colorFontWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addPriceTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:paddingTop="10dp"
        android:text="@string/coffeePriceLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addPriceET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/addShopTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:paddingTop="10dp"
        android:text="@string/coffeeShopLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addShopET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/addNameTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="36dp"
        android:paddingTop="10dp"
        android:text="@string/coffeeNameLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addShopTV"
        app:layout_constraintEnd_toStartOf="@+id/addNameET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <EditText
        android:id="@+id/addNameET"
        android:layout_width="189dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Enter Food Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/addNameTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/addPriceET"
        android:layout_width="131dp"
        android:layout_height="42dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Enter Price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/addPriceTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <EditText
        android:id="@+id/addShopET"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Enter Resturant"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <RatingBar
        android:id="@+id/addRatingBar"
        android:layout_width="242dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:rating="1"
        android:stepSize="0.5"
        app:layout_constraintBottom_toTopOf="@+id/editfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPriceET"
        app:layout_constraintVertical_bias="0.213" />

    <Button
        android:id="@+id/addCoffeeBtn"
        android:elevation="5dp"
        android:layout_width="79dp"
        android:layout_height="84dp"
        android:layout_marginTop="68dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/blue_add_48"
        android:text="@string/addCoffeeBtnLbl"
        app:layout_constraintBottom_toTopOf="@+id/editfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRatingBar"
        app:layout_constraintVertical_bias="0.714" />

</android.support.constraint.ConstraintLayout>